# labelhound

./: .gitignore  model_user.py  pipeline_sentiment.py  pyproject.toml  sentiment_analyzer.py  sentiment_guesser.ipynb  sentiment_training.py  train_classifier.py  train_labeler.ipynb  train_labeler.py  training.ipynb  training_v2.ipynb  twitter_dev_keys
examples/: tested.xlsx  to_test.xlsx
models/: model_0.pickle  model_1.pickle  model_2.pickle  model_3.pickle
utils/: twitter_api_fetcher.py  utils.py
