[tool.poetry]
name = "labelhound"
version = "0.1.0"
description = ""
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nltk = "^3.8"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
tensorflow = "^2.11.0"
jupyterlab = "^3.5.1"
scikit-learn = "^1.2.0"
tensorflow-hub = "^0.12.0"
tensorflow-text = "^2.11.0"
ipywidgets = "^8.0.3"
jupyter = "^1.0.0"
openpyxl = "^3.0.10"
tweepy = "^4.12.1"
gensim = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
